--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+body{
+ 
+  margin: 5px;
+  font-family: 'Inter', sans-serif;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.main{
+  display: grid;
+  grid-template-columns: 1fr 1fr  ;
+  background-color: #21222A;
+  
   color: white;
 }
-
-.App-link {
+.main1{
+  
+  display: flex;
   color: #61dafb;
+ 
+ 
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.h11{
+  margin: 0;
+  font-size: 39px;
+}
+.ul11 {
+  line-height: 19px;
+ 
+  padding: 100px 0; /* Adjust the top and bottom padding as needed */
+}
+::marker{
+  color: #61dafb;
+  font-size: 1.7rem;
+ 
+}
+.nav{
+  height: 10px;
+}
+.test{
+  display: grid;
+ 
+}
+.ye1{
+  display: grid;
+}
+.jok{
+ 
+  width: 100px;
+  box-shadow: 0px -10px 10px 1px rgba(0, 0, 0, 0.1) ;
+ 
+}
+.air{
+  width: 400px;
+  padding-left: 500px;
+
+ 
+}
+.img22{
+  padding-left: 500px;
 }
