--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,28 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.card--flex {
+  display: flex;
+  flex-direction: row;
+  padding: 45px;
+  cursor: pointer;
+ 
+  width: 500px;
+  box-shadow: 0px -10px 3px rgba(65, 18, 175, 0.1);
+  position: relative;
+
+ 
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+
+.card--row{
+  padding-left: 15px;
+  display: flex;
+  flex-direction:column ;
+}
+.card--para{
+  width: 300px;
+}
+.card--img{
+  border-radius: 9px;
+  width: 200px;
+
 }
